--- a/0705.html
+++ b/0705.html
@@ -69,7 +69,7 @@
             <button class="header__container__button">
                 <img class="header__container__button__img" src="img/applelogo.png" alt="" >
                 <span class="header__container__button__span">Availble on the</span>
-                <span class="header__container__button__span">App Store</span>
+                <span class="header__container__button__span header__container__button__span--app">App Store</span>
             </button>
         </div>
     </div>
