--- a/0705.html
+++ b/0705.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,6 @@
     <title>富邦人壽</title>
     <link rel="icon" href="img/icon.ico">
     <link rel="stylesheet" href="0705.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="0705.js"></script>
 </head>
 <body>
     <div class="color"></div>
@@ -129,16 +127,16 @@
         </div>
         <div class="content__fixbutton">
             <div class="content__fixbutton__top">
-                <a href=""><img src="img/googleplay.png" alt=""></a>
-                <span>Google Play</span>
+                <a class="content__fixbutton__top__a" href=""><img src="img/googleplay.png" alt=""></a>
+                <span class="content__fixbutton__top__span">Google Play</span>
             </div>
             <div class="content__fixbutton__top">
-                <a href=""><img src="img/applelogo.png" alt=""></a>
-                <span>Apple store</span>
+                <a class="content__fixbutton__top__a" href=""><img src="img/applelogo.png" alt=""></a>
+                <span class="content__fixbutton__top__span">Apple store</span>
             </div>
             <div class="content__fixbutton__top content__fixbutton__top--up">
-                <a href="#"><img src="img/up.png" alt=""></a>
-                <span>TOP</span>
+                <a class="content__fixbutton__top__a" href="#"><img src="img/up.png" alt=""></a>
+                <span class="content__fixbutton__top__span">TOP</span>
             </div>
         </div>
     </div>
@@ -171,5 +169,7 @@
             <span class="footer__nav__span">ⒸFubon Life Insurance Co.Ltd. All Rights Reserved</span>
         </ul>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="0705.js"></script>
 </body>
 </html>
