--- a/BS版/index.html
+++ b/BS版/index.html
@@ -119,7 +119,7 @@
                                 <hr class="active__cardbody__hr">
                                 <h3 class="card-title">活動1活動1活動1</h3>
                                 <p class="card-text">活動文案活動文案活動文案活動文案活動文案活動文案活動文案活動文案活動文案活動文案活動文案</p>
-                                <p class="card-text"><small class="text-muted">【活動文案活動文案活動文案活動文案】</small></p>
+                                <p class="card-text"><small class="active__cardbody__small">【活動文案活動文案活動文案活動文案】</small></p>
                             </div>
                           </div>
                         </div>
@@ -131,7 +131,7 @@
                                     <hr class="active__cardbody__hr">
                                     <h3 class="card-title">活動2活動2活動2</h3>
                                     <p class="card-text">活動文案活動文案活動文案活動文案活動文案活動文案活動文案活動文案活動文案活動文案活動文案</p>
-                                    <p class="card-text"><small class="text-muted">【活動文案活動文案活動文案活動文案】</small></p>
+                                    <p class="card-text"><small class="active__cardbody__small">【活動文案活動文案活動文案活動文案】</small></p>
                                 </div>
                             </div>
                             <div class="col-lg-6 col-sm-12 col-12">
